added semantic elements, style navbar

--- a/index.html
+++ b/index.html
@@ -5,8 +5,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Apple Website</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <script src="https://kit.fontawesome.com/89c0957ca7.js" crossorigin="anonymous"></script>
+
+
 </head>
 <body>
-    
+    <main>
+        <nav>
+            <ul class="d-flex navbar-elements">
+                <li>
+                    <i class="fab fa-apple"></i>
+                </li>
+                <li>Store</li>
+                <li>Mac</li>
+                <li>iPod</li>
+                <li>iPhone</li>
+                <li>iPad</li>
+                <li>iTune</li>
+                <li>Support</li>
+                <li> 
+                    <i class="fas fa-search"></i>
+                    <input type="text">
+                </li>
+            </ul>
+        </nav>
+        <section></section>
+
+    </main>
+    <footer> </footer>
 </body>
 </html>
