--- a/index.html
+++ b/index.html
@@ -15,18 +15,20 @@
         <nav>
             <ul class="d-flex navbar-elements">
                 <li>
-                    <i class="fab fa-apple"></i>
+                    <i class="fab fa-apple"> </i>
                 </li>
+                
                 <li>Store</li>
-                <li>Mac</li>
+                <li class="test">Mac</li>
                 <li>iPod</li>
                 <li>iPhone</li>
                 <li>iPad</li>
                 <li>iTune</li>
                 <li>Support</li>
                 <li> 
-                    <i class="fas fa-search"></i>
-                    <input type="text">
+                     <i id="search-icon" class="fas fa-search"></i>
+                     <input type="text"> 
+                 
                 </li>
             </ul>
         </nav>
