Add images and start product section

--- a/index.html
+++ b/index.html
@@ -11,30 +11,39 @@
 
 </head>
 <body>
-    <main>
+    <section class="combo">
+     <section class="top">
         <nav>
             <ul class="d-flex navbar-elements">
-                <li>
-                    <i class="fab fa-apple"> </i>
-                </li>
-                
+                <li> <i class="fab fa-apple"> </i> </li>
                 <li>Store</li>
-                <li class="test">Mac</li>
+                <li>Mac</li>
                 <li>iPod</li>
                 <li>iPhone</li>
                 <li>iPad</li>
                 <li>iTune</li>
                 <li>Support</li>
-                <li> 
+                <li>
                      <i id="search-icon" class="fas fa-search"></i>
-                     <input type="text"> 
-                 
+                     <input type="text">
                 </li>
             </ul>
         </nav>
-        <section></section>
+        <section class="img-text">
+          <img src = "img/text-1.png">
+          <img src = "img/text-2.png">
+          <img src = "img/text-3.png">
+        </section>
+      </section>
+      <section class="gen-grid product-grid">
+        <img src = "img/iphone5c.jpg">
+        <img src = "img/iphone5c.jpg">
+        <img src = "img/iphone5c.jpg">
+        <img src = "img/iphone5c.jpg">
+      </section>
+    </section>
 
-    </main>
-    <footer> </footer>
+
+
 </body>
 </html>
