Fix main top empty

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 
 </head>
 <body>
-    <section class="combo">
-     <section class="top">
-        <nav>
+   <main>
+     
+        <nav class="d-flex"> 
             <ul class="d-flex navbar-elements">
                 <li> <i class="fab fa-apple"> </i> </li>
                 <li>Store</li>
@@ -29,20 +29,33 @@
                 </li>
             </ul>
         </nav>
+
         <section class="img-text">
           <img src = "img/text-1.png">
           <img src = "img/text-2.png">
           <img src = "img/text-3.png">
         </section>
-      </section>
-      <section class="gen-grid product-grid">
+      
+    </main>
+    <!-- <section class="gen-grid product-grid">
         <img src = "img/iphone5c.jpg">
         <img src = "img/iphone5c.jpg">
         <img src = "img/iphone5c.jpg">
         <img src = "img/iphone5c.jpg">
-      </section>
-    </section>
-
+    </section> -->
+   
+<footer>
+  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id eveniet porro, sed soluta odit exercitationem ad ullam saepe, laboriosam magnam illum modi sapiente corrupti, qui accusamus fugiat consequatur distinctio? Alias.
+  Ab, voluptas voluptatum nisi tempora vero hic dicta, repudiandae aperiam doloribus odio atque assumenda mollitia ea cumque voluptatibus architecto, ipsam eos distinctio accusamus qui accusantium quos. A ratione excepturi aut?
+  Reprehenderit sed, consectetur veniam, odit nisi illo quaerat nobis quis eos error iure sequi praesentium ducimus dolorum! Veniam, officia. Earum eum ipsam aliquam, reprehenderit delectus veniam ipsa ea quos ullam?
+  Deserunt voluptas quod, architecto, repellendus est aut inventore ad exercitationem, voluptatem vero nostrum. Qui sunt quo assumenda reprehenderit illo iste totam, accusantium quasi doloribus iusto perferendis nam ex. Voluptas, pariatur!
+  Quisquam consequatur sunt quasi nam, animi facilis quo doloremque molestiae odio, illo iusto distinctio consequuntur beatae tempora omnis aspernatur. Sapiente aspernatur, dicta natus suscipit soluta nemo? Magnam quisquam tempore voluptatem?
+  Quidem, quaerat a officia eveniet in ad sunt natus ex aperiam nobis voluptatum assumenda quibusdam magnam? Culpa labore quam tenetur cum dicta facere impedit officia quas sit. Earum, dolor tenetur.
+  Nobis ea at neque voluptates eum. Aliquam alias eveniet dolor minima cumque accusamus, explicabo quaerat odit similique. Impedit officia, neque accusamus voluptate ipsum perspiciatis suscipit totam tempore ea nihil magnam!
+  Dicta provident fugiat repudiandae asperiores maiores cum voluptates voluptas eligendi exercitationem magni, ratione possimus delectus ea modi nesciunt tempore corporis, similique vitae et molestias perferendis nihil quis doloribus earum! Nihil!
+  Distinctio accusantium quia molestias nisi eius consectetur unde ipsa cupiditate eveniet voluptatem earum, dicta porro culpa aperiam quas repellendus odio dolore repellat adipisci corrupti impedit rerum? Perspiciatis nisi necessitatibus accusantium.
+  Quaerat amet rem eius perferendis? Atque, autem architecto totam iusto voluptate placeat! Odit itaque ipsum debitis nobis ducimus laudantium nihil nam quo expedita eius tenetur recusandae, earum dolores alias voluptate.
+</footer>
 
 
 </body>
