Add semantic html tags

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 </head>
 <body>
-    <section class="combo">
+    <main class="combo">
      <section class="top">
         <nav>
             <ul class="d-flex navbar-elements">
@@ -41,13 +41,13 @@
         <img src = "img/happybirthdaymac.jpg">
         <img src = "img/supplier.jpg">
       </section>
-      <section class="bottom-content gen-grid">
+      <footer class="bottom-content gen-grid">
         <p>Shop the Apple Online Store (1-800-MY-APPLE), visit an Apple Retail Store, or find a reseller.</p>
         <p>Site Map Hot News RSS Feeds Media Info Enviroment Job Opportunities Contact Us</p>
         <p>Copyright © 2014 Apple Inc. All rights reserved. Terms of Use Privacy Policy</p>
         <p></p>
-      <section>
-    </section>
+      <footer>
+    </main>
 
 </body>
 </html>
