fix layout change color of navbar

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 </head>
 <body>
-    <main class="combo">
+    <main class="gen-grid">
      <section class="top">
         <nav>
             <ul class="d-flex navbar-elements">
@@ -35,17 +35,16 @@
           <img src = "img/text-3.png">
         </section>
       </section>
-      <section class="gen-grid product-grid">
+      <section class="product-grid">
         <img src = "img/iphone5s.jpg">
         <img src = "img/iphone5c.jpg">
         <img src = "img/happybirthdaymac.jpg">
         <img src = "img/supplier.jpg">
       </section>
-      <footer class="bottom-content gen-grid">
-        <p>Shop the Apple Online Store (1-800-MY-APPLE), visit an Apple Retail Store, or find a reseller.</p>
-        <p>Site Map Hot News RSS Feeds Media Info Enviroment Job Opportunities Contact Us</p>
-        <p>Copyright © 2014 Apple Inc. All rights reserved. Terms of Use Privacy Policy</p>
-        <p></p>
+      <footer class="gen-grid">
+        <p>Shop the <a href="">Apple Online Store</a>(1-800-MY-APPLE), visit an <a href="">Apple Retail Store</a>, or find a <a href="">reseller</a>.</p>
+        <p> <a href="">Site Map</a> <a href="">Hot News</a> <a href="">RSS Feeds</a> <a href="">Media Info</a> <a href="">Enviroment</a> <a href="">Job Opportunities</a> <a href="">Contact Us</a> <img src="img/language.png" alt="usa-flag"> </p>
+        <p>Copyright © 2014 Apple Inc. All rights reserved.  <a href="">Terms of Use</a>  <a href="">Privacy Policy</a></p>
       <footer>
     </main>
 
