fixed linter css errors

--- a/index.html
+++ b/index.html
@@ -30,22 +30,22 @@
             </ul>
         </nav>
         <section class="img-text">
-          <img src = "img/text-1.png">
-          <img src = "img/text-2.png">
-          <img src = "img/text-3.png">
+          <img src = "img/text-1.png" alt="picture1"  >
+          <img src = "img/text-2.png" alt="picture1">
+          <img src = "img/text-3.png" alt="picture1">"
         </section>
       </section>
       <section class="product-grid">
-        <img src = "img/iphone5s.jpg">
-        <img src = "img/iphone5c.jpg">
-        <img src = "img/happybirthdaymac.jpg">
-        <img src = "img/supplier.jpg">
+        <img src = "img/iphone5s.jpg" alt="picture1"> 
+        <img src = "img/iphone5c.jpg" alt="picture1">
+        <img src = "img/happybirthdaymac.jpg" alt="picture1">
+        <img src = "img/supplier.jpg" alt="picture1">
       </section>
       <footer class="gen-grid">
         <p>Shop the <a href="">Apple Online Store</a>(1-800-MY-APPLE), visit an <a href="">Apple Retail Store</a>, or find a <a href="">reseller</a>.</p>
         <p> <a href="">Site Map</a> <a href="">Hot News</a> <a href="">RSS Feeds</a> <a href="">Media Info</a> <a href="">Enviroment</a> <a href="">Job Opportunities</a> <a href="">Contact Us</a> <img src="img/language.png" alt="usa-flag"> </p>
         <p>Copyright © 2014 Apple Inc. All rights reserved.  <a href="">Terms of Use</a>  <a href="">Privacy Policy</a></p>
-      <footer>
+      </footer>
     </main>
 
 </body>
