Add css folder, links in navbar and adjust product grid gap

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Apple Website</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <script src="https://kit.fontawesome.com/89c0957ca7.js" crossorigin="anonymous"></script>
 
@@ -15,14 +15,14 @@
      <section class="top">
         <nav>
             <ul class="d-flex navbar-elements">
-                <li> <i class="fab fa-apple"> </i> </li>
-                <li>Store</li>
-                <li>Mac</li>
-                <li>iPod</li>
-                <li>iPhone</li>
-                <li>iPad</li>
-                <li>iTune</li>
-                <li>Support</li>
+                <li><a href="https://www.test.com/"><i class="fab fa-apple"></i></a></li>
+                <li><a href="https://www.test.com/">Store</a></li>
+                <li><a href="https://www.test.com/">Mac</a></li>
+                <li><a href="https://www.test.com/">iPod</a></li>
+                <li><a href="https://www.test.com/">iPhone</a></li>
+                <li><a href="https://www.test.com/">iPad</a></li>
+                <li><a href="https://www.test.com/">iTune</a></li>
+                <li><a href="https://www.test.com/">Support</a></li>
                 <li>
                      <i id="search-icon" class="fas fa-search"></i>
                      <input type="text">
@@ -35,7 +35,7 @@
           <img src = "img/text-3.png" alt="picture1">"
         </section>
       </section>
-      <section class="product-grid">
+      <section class="product-grid gen-grid">
         <a href="https://www.test.com"><img src = "img/iphone5s.jpg" alt="picture1"> </a>
         <a href="https://www.test.com"><img src = "img/iphone5c.jpg" alt="picture1"></a>
         <a href="https://www.test.com"><img src = "img/happybirthdaymac.jpg" alt="picture1"></a>
